[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
name = "shell_grunt2"
version = "0.2.5"
edition = "2018"

[dependencies]
clap = "2.24.2"
floating-duration = "0.1.1"
lazy_static = "1.2.0"
libc = "0.2.22"
notify = "4.0.1"
regex = "1.5.5"
self_update = "0.7.0"
sha1 = "0.6.0"
term = "0.6.1"
time = "^0.2"
pathdiff = "0.1.0"
lua = "0.0.10"

[dependencies.ctrlc]
features = ["termination"]
version = "3.0"
